--- a/css/style.css
+++ b/css/style.css
@@ -471,7 +471,7 @@ input.gn-search:focus {
 	 font-size: 40px;
 }
 .intro .slogan p {
-	color: #eee;
+	color: #4f4f4f;
 	margin-bottom: 50px;
 	font-size: 20px;
 }
